--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/three": "^0.165.0",
     "framer-motion": "^11.2.11",
     "gsap": "^3.12.5",
@@ -21,6 +22,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
+    "react-redux": "^9.1.2",
     "three": "^0.165.0"
   },
   "devDependencies": {
