--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.165.0",
     "framer-motion": "^11.2.11",
     "gsap": "^3.12.5",
+    "leva": "^0.9.35",
     "maath": "^0.10.7",
     "next": "14.2.4",
     "react": "^18",
