--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "leva": "^0.9.35",
     "maath": "^0.10.7",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
