--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/three": "^0.165.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.2.11",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "lucide-react": "^0.438.0",
     "maath": "^0.10.7",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -25,6 +31,8 @@
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
     "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.165.0"
   },
   "devDependencies": {
