--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,19 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.5",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-table": "^8.20.5",
     "@types/three": "^0.165.0",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
@@ -34,6 +37,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
@@ -45,6 +49,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-headroom": "^3.2.3",
+    "@types/react-modal": "^3.16.3",
     "postcss": "^8",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.1",
