--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-headroom": "^3.2.1",
+    "react-markdown": "^10.1.0",
     "react-modal": "^3.16.3",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
